Update to SDK 34